modal page on update client image

--- a/src/app/clientes/clientes.component.html
+++ b/src/app/clientes/clientes.component.html
@@ -1,3 +1,4 @@
+<app-detalle *ngIf="clienteSeleccionado" [cliente] = "clienteSeleccionado"></app-detalle>
 <div class="card border-primary mb-3">
   <div class="card-header">Clientes</div>
   <div class="card-body text-primary">
@@ -25,7 +26,7 @@
     </thead>
     <tbody>
       <tr *ngFor="let cliente of clientes">
-        <td><button type="button" name="button" [routerLink]="['/clientes/ver', cliente.id]" class="btn btn-success">{{cliente.id}}</button></td>
+        <td><button type="button" name="button" (click)=abrirModal(cliente); class="btn btn-success">{{cliente.id}}</button></td>
         <td>{{cliente.nombre}}</td>
         <td>{{cliente.apellido}}</td>
         <td>{{cliente.email}}</td>
