--- a/src/app/clientes/detalle/detalle.component.html
+++ b/src/app/clientes/detalle/detalle.component.html
@@ -1,37 +1,48 @@
-<div class="card bg-dark text-white">
-  <div class="card-header">{{titulo}}</div>
-  <div class="card-body">
-    <div class="container">
-      <div class="row">
-        <div class="col-sm">
-          <ul *ngIf="cliente" class="list-group text-dark mb-3">
-            <li class="list-group-item">{{cliente.nombre}}</li>
-            <li class="list-group-item">{{cliente.apellido}}</li>
-            <li class="list-group-item">{{cliente.email}}</li>
-            <li class="list-group-item">{{cliente.createAt | date:"fullDate"}}</li>
-          </ul>
-          <div class="input-group mb-3">
-            <div class="custom-file">
-              <input (change)="seleccionarFoto($event)" type="file" class="custom-file-input" id="inputGroupFile04" aria-describedby="inputGroupFileAddon04">
-              <label class="custom-file-label" for="inputGroupFile04">Choose file</label>
+<div *ngIf="modalService.modal" class="modal" tabindex="-1" role="dialog" style="display:block;">
+  <div class="modal-dialog modal-lg" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title">{{titulo}}</h5>
+        <button type="button" (click)="cerrarModal()" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        <div class="container">
+          <div class="row">
+            <div class="col-sm">
+              <ul *ngIf="cliente" class="list-group text-dark mb-3">
+                <li class="list-group-item">{{cliente.nombre}}</li>
+                <li class="list-group-item">{{cliente.apellido}}</li>
+                <li class="list-group-item">{{cliente.email}}</li>
+                <li class="list-group-item">{{cliente.createAt}}</li>
+              </ul>
+              <div class="input-group mb-3">
+                <div class="custom-file">
+                  <input (change)="seleccionarFoto($event)" type="file" class="custom-file-input" id="inputGroupFile04" aria-describedby="inputGroupFileAddon04">
+                  <label class="custom-file-label" for="inputGroupFile04">Choose file</label>
+                </div>
+                <div class="input-group-append">
+                  <button [disabled]="!fotoSeleccionada" (click)="subirFoto()" class="btn btn-outline-secondary" type="button" id="inputGroupFileAddon04">Subir</button>
+                </div>
+              </div>
+
+              <div *ngIf="progress > 0" class="progress" style="height: 40px">
+                <div class="progress-bar" role="progressbar" [ngStyle]="{width:progress+'%'}" attr.aria-valuenow="{{progress}}" aria-valuemin="0" aria-valuemax="100">
+                  {{progress}}%
+                </div>
+              </div>
+
             </div>
-            <div class="input-group-append">
-              <button [disabled]="!fotoSeleccionada" (click)="subirFoto()" class="btn btn-outline-secondary" type="button" id="inputGroupFileAddon04">Subir</button>
+            <div class="col-sm">
+              <img *ngIf="cliente?.foto" src="http://localhost:8080/api/uploads/img/{{cliente.foto}}" alt="{{cliente.foto}}" class="img-img-thumbnail rounded">
             </div>
           </div>
-
-          <div *ngIf="progress > 0" class="progress" style="height: 40px">
-            <div class="progress-bar" role="progressbar" [ngStyle]="{width:progress+'%'}" attr.aria-valuenow="{{progress}}" aria-valuemin="0" aria-valuemax="100">
-              {{progress}}%
-            </div>
-          </div>
-
-        </div>
-        <div class="col-sm">
-          <img *ngIf="cliente?.foto" src="http://localhost:8080/api/uploads/img/{{cliente.foto}}" alt="{{cliente.foto}}" class="img-img-thumbnail rounded">
         </div>
       </div>
+      <div class="modal-footer">
+        <button type="button" (click)="cerrarModal()" class="btn btn-secondary" data-dismiss="modal">Close</button>
+      </div>
     </div>
-
   </div>
 </div>
