--- a/src/app/clientes/detalle/detalle.component.html
+++ b/src/app/clientes/detalle/detalle.component.html
@@ -1,3 +1,4 @@
+<div class="abrir-modal animacion fadeIn" *ngIf="modalService.modal">
 <div *ngIf="modalService.modal" class="modal" tabindex="-1" role="dialog" style="display:block;">
   <div class="modal-dialog modal-lg" role="document">
     <div class="modal-content">
@@ -45,4 +46,5 @@
       </div>
     </div>
   </div>
+</div>
 </div>
