Partner section developed for each worker

--- a/src/app/clientes/detalle/detalle.component.html
+++ b/src/app/clientes/detalle/detalle.component.html
@@ -16,6 +16,7 @@
                 <li class="list-group-item">{{cliente.nombre}}</li>
                 <li class="list-group-item">{{cliente.apellido}}</li>
                 <li class="list-group-item">{{cliente.email}}</li>
+                <li class="list-group-item">{{cliente.partner.nombre}}</li>
                 <li class="list-group-item">{{cliente.createAt}}</li>
               </ul>
               <div class="input-group mb-3">
